--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,12 @@
+# ENVIRONMENT
+ENV="development"
+
 # DATABASE
-DATABASE_URL="mysql://root:root@localhost:3306/api"
+DATABASE_HOST=""
+DATABASE_PORT=""
+DATABASE_USERNAME=""
+DATABASE_PASSWORD=""
+DATABASE_NAME=""
 
 # JWT SETTINGS
 JWT_SECRET="SECRET..."
