--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "pretest:e2e": "cross-env ENV=test npm run clear:db:test && cross-env ENV=test npm run migrate:up",
+    "test:e2e": "cross-env ENV=test jest --config ./test/jest-e2e.json",
+    "posttest:e2e": "cross-env ENV=test npm run clear:db:test",
+    "typeorm:ts": "typeorm-ts-node-commonjs",
+    "clear:db:test": "npm run typeorm:ts schema:drop -- -d ./typeorm/data-source.ts",
+    "migrate:create": "npm run typeorm:ts migration:create -- ./typeorm/migrations/Migrate",
+    "migrate:up": "npm run typeorm:ts migration:run -- -d ./typeorm/data-source.ts",
+    "migrate:down": "npm run typeorm:ts migration:revert -- -d ./typeorm/data-source.ts",
+    "preprod": "npm run format && npm run lint && npm run test && npm run test:e2e",
+    "prod": "npm run build"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
@@ -28,15 +37,18 @@
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^5.1.1",
-    "@prisma/client": "^5.8.1",
+    "@nestjs/typeorm": "^10.0.1",
     "@types/pug": "^2.0.10",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.1",
+    "mysql2": "^3.9.0",
     "nodemailer": "^6.9.8",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -51,12 +63,12 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.8.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
